test/errors/python_error/zs/property_names/structure_function_property_clash_error.zs
package property_names.structure_function_property_clash_error;

struct TestStructure
{
    string funcTest; // clashes with generated function method

    function bool test()
    {
        return true;
    }
};
